# indi-proxy

./: .gitignore  CMakeLists.txt  README.md  alloc.c  clean.sh  indi.xsd  indi_proxy.c  indi_proxy.h  indi_proxy_xsd.h  main.c  module.c  setup.py  test.c  test.py  test1.c  test2.c  xml_to_json.c
schema/: indi.xsd
src/: alloc.c  control.c  indi_proxy.h  indi_proxy_internal.h  indi_proxy_schema.h  json.c  json_to_xml.c  main.c  module.c  proxy.c  transform_json_to_xml.c  transform_xml_to_json.c  validation.c  xml.c  xml_to_json.c
src/schema/: indi.xsd
src/structs/: indi_boolean.c  indi_dict.c  indi_list.c  indi_null.c  indi_number.c  indi_string.c
structs/: indi_boolean.c  indi_dict.c  indi_list.c  indi_null.c
test/: client.py  proxy.py  test.py  test1.c  test2.c
